Fix  #2337: Alignement icone "Sujet résolu" en format mobile

--- a/assets/scss/components/_topic-list.scss
+++ b/assets/scss/components/_topic-list.scss
@@ -331,7 +331,7 @@
 @media only screen and #{$media-mobile} {
     .topic-list {
         .topic-infos .ico-after:after {
-            margin: 4px 0 0 2px;
+            margin: 4px 0 0 10px;
         }
         .topic-description {
             .topic-subtitle:empty {
